--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
-<script src="./js/task-1.js"
-type="module"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Image Gallery</title>
+  <link rel="stylesheet" href="css/styles.css"> 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css">
+</head>
+<body>
+  <ul class="gallery"></ul>
 
-<script src="./js/task-2.js"
-type="module"></script>
-
-<script src="./js/task-3.js"
-type="module"></script>
+  <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
+  <script src="js/gallery.js"></script> 
+</body>
+</html>
